[HERCULES-9158] - I18n nombre de Grupo